# travel_agent

./: .env.example  .gitignore  LICENSE  Makefile  README.md  pyproject.toml
docs/: architecture.md  future_todo.md  lessons_learned.md  tutorial_plan.md
docs/steps/: step-01-foundation.md  step-02-project-setup.md  step-03-autonavi-tools.md  step-04-langchain-agent.md  step-05-skills.md  step-06-mcp.md  step-07-evaluation.md  step-08-retrospective.md
skills/weekend_city_planner/: SKILL.md  meta.json
skills/weekend_city_planner/scripts/: README.md
src/travel_agent/: __init__.py  app.py  config.py  main.py  tool_registry.py
src/travel_agent/agent/: __init__.py  builder.py  react.py
src/travel_agent/clients/: __init__.py  deepseek.py
src/travel_agent/mcp/: __init__.py  client.py
src/travel_agent/prompts/: system.py
src/travel_agent/schemas/: __init__.py  itinerary.py
src/travel_agent/skills/: __init__.py  base.py  filesystem.py  registry.py
src/travel_agent/tools/: __init__.py  amap.py
tests/: test_config.py  test_skill_bundles.py  test_skills.py
